--- a/app/(legal)/privacy-policy/page.mdx
+++ b/app/(legal)/privacy-policy/page.mdx
@@ -1,58 +1,54 @@
-# Privacy Policy for ShipAny
+# Privacy Policy for gramhir.pro ai photo generator shop
 
 ## Introduction
 
-Welcome to ShipAny, the **NextJS Boilerplate** designed to help you build AI SaaS startups quickly and efficiently. At ShipAny, your privacy is of utmost importance to us, and this privacy policy outlines how we collect, use, and protect your personal information when you use our services.
+Welcome to gramhir.pro ai photo generator shop (aiphotoshop.uk), an AI-powered photo generation platform for creators and artists. Your privacy is very important to us. This privacy policy explains how we collect, use, and protect your personal information when you use our services.
 
 ## Information Collection and Use
 
-We collect the following types of data to provide you with a better experience while using ShipAny:
+We collect the following types of information to provide you with a better experience on aiphotoshop.uk:
 
 1. **Account Information**
-
-   - **What We Collect**: This includes your name, email address, and any other information you provide when creating an account.
-   - **Purpose**: To manage your account and provide customer support.
+   - **What We Collect**: Your name, email address, and any other information you provide when creating an account.
+   - **Purpose**: To manage your account, provide customer support, and enable access to paid features.
 
 2. **Usage Details**
-
-   - **What We Collect**: Information about how you use ShipAny, including your interactions, features accessed, and usage frequency.
-   - **Purpose**: To analyze user engagement and improve our services.
+   - **What We Collect**: Information about how you use aiphotoshop.uk, including your interactions, generated photos, and usage frequency.
+   - **Purpose**: To improve our services and personalize your experience.
 
 3. **Device Information**
-
-   - **What We Collect**: Data regarding the devices you use to access ShipAny, such as device type, operating system, and browser type.
-   - **Purpose**: To optimize our services for different devices and ensure compatibility.
+   - **What We Collect**: Data about the devices you use to access aiphotoshop.uk, such as device type, operating system, and browser type.
+   - **Purpose**: To optimize our platform for all users.
 
 4. **Cookies**
-
-   - **What We Collect**: Small data files placed on your device that help us track user preferences and improve user experience.
-   - **Purpose**: To enhance the functionality of our services and personalize your experience.
+   - **What We Collect**: Cookies and similar technologies to remember your preferences and enhance your experience.
+   - **Purpose**: To provide a smooth and personalized user experience.
 
 5. **Payment and Billing Information**
-   - **What We Collect**: Information regarding your payment methods, such as credit card number, billing address, and any details required for transaction processing.
-   - **Purpose**: To facilitate billing and payment processing for our services.
+   - **What We Collect**: Payment details such as credit card number, billing address, and transaction information (processed securely via Stripe).
+   - **Purpose**: To process payments and manage your subscription or purchases.
 
 ## Data Storage and Security
 
-We take the security of your personal information seriously. The data we collect is stored securely on our servers, and we implement a variety of security measures including encryption and access controls to protect against unauthorized access, alteration, disclosure, or destruction of your personal information. However, please be aware that no method of transmission over the Internet, or method of electronic storage, is 100% secure, and we cannot guarantee its absolute security.
+We take your data security seriously. All personal information is stored securely and protected by industry-standard security measures. However, no method of transmission or storage is 100% secure, and we cannot guarantee absolute security.
 
 ## Information Sharing and Disclosure
 
-We do not sell, trade, or otherwise transfer your personal information to outside parties, except in the following circumstances:
-
-- To comply with legal obligations or respond to lawful requests from public authorities.
-- To protect our rights, property, or safety, or that of our users or others.
-- To provide services through trusted third-party partners who assist us in operating our website or conducting our business, subject to confidentiality agreements.
+We do not sell or share your personal information with third parties except:
+- To comply with legal obligations or requests from authorities.
+- To protect the rights, property, or safety of our users or others.
+- To trusted partners (such as payment processors) who help us operate our service, under strict confidentiality agreements.
 
 ## Changes to This Policy
 
-We may update this privacy policy from time to time. We will notify you of any changes by posting the new policy on this page and updating the "effective date" at the top of this policy. You are advised to review this privacy policy periodically for any changes. Changes to this privacy policy are effective when they are posted on this page.
+We may update this privacy policy from time to time. Any changes will be posted on this page with an updated effective date. Please review this policy regularly.
 
 ## Contact Us
 
-If you have any questions or concerns about this privacy policy or our data practices, please contact us at:
+If you have any questions or concerns about this privacy policy or your data, please contact us at:
 
-**Copyright Owner**: [shipany.ai](http://shipany.ai)
-**Email**: [support@shipany.ai](mailto:support@shipany.ai)
+**Brand**: gramhir.pro ai photo generator shop  
+**Website**: [aiphotoshop.uk](https://aiphotoshop.uk)  
+**Email**: [support@aiphotoshop.uk](mailto:support@aiphotoshop.uk)
 
-By using ShipAny, you consent to our privacy policy and agree to its terms. Thank you for trusting us with your information!
+By using aiphotoshop.uk, you agree to this privacy policy and our terms. Thank you for trusting us with your information!
