--- a/i18n/pages/landing/zh.json
+++ b/i18n/pages/landing/zh.json
@@ -1,19 +1,19 @@
 {
-  "template": "shipany-template-one",
+  "template": "aiphotoshop",
   "theme": "light",
   "header": {
     "brand": {
-      "title": "ShipAny",
+      "title": "AIPHOTOSHOP",
       "logo": {
         "src": "/logo.png",
-        "alt": "ShipAny"
+        "alt": "AIPHOTOSHOP"
       },
       "url": "/"
     },
     "nav": {
       "items": [
         {
-          "title": "功能特点",
+          "title": "AI绘画",
           "url": "/#feature",
           "icon": "RiSparkling2Line"
         },
@@ -23,7 +23,7 @@
           "icon": "RiMoneyDollarCircleLine"
         },
         {
-          "title": "案例展示",
+          "title": "作品展示",
           "url": "/showcase",
           "icon": "RiApps2Line"
         }
@@ -31,9 +31,9 @@
     },
     "buttons": [
       {
-        "title": "获取 ShipAny",
-        "url": "https://shipany.ai",
-        "target": "_blank",
+        "title": "立即体验",
+        "url": "/#pricing",
+        "target": "_self",
         "variant": "link",
         "icon": "RiArrowRightUpLine"
       }
@@ -43,36 +43,36 @@
     "show_locale": true
   },
   "hero": {
-    "title": "几小时内快速构建 AI 创业项目，而不是几天",
-    "highlight_text": "快速构建",
-    "description": "ShipAny 是一个用于构建 AI SaaS 创业项目的 NextJS 模板。<br/>通过丰富的模板和组件快速启动。",
+    "title": "AI照片生成，开启创意新纪元",
+    "highlight_text": "AI照片生成",
+    "description": "AIPHOTOSHOP.uk，专为AI绘画爱好者打造的AI照片生成平台。<br/>付费后即可无限制使用AI生成高质量照片，释放你的想象力。",
     "announcement": {
-      "label": "2025",
-      "title": "🎉 新年快乐",
+      "label": "上线啦",
+      "title": "🎉 新用户专享优惠",
       "url": "/#pricing"
     },
-    "tip": "🎁 2025年前五折优惠",
+    "tip": "🎁 注册即享免费体验额度",
     "buttons": [
       {
-        "title": "立即开始",
+        "title": "立即生成照片",
         "icon": "RiFlashlightFill",
         "url": "/#pricing",
         "target": "_self",
         "variant": "default"
       },
       {
-        "title": "加入 Discord",
-        "icon": "RiDiscordFill",
-        "url": "https://discord.gg/HQNnrzjZQS",
-        "target": "_blank",
+        "title": "查看作品",
+        "icon": "RiApps2Line",
+        "url": "/showcase",
+        "target": "_self",
         "variant": "outline"
       }
     ],
     "show_happy_users": true,
-    "show_badge": false
+    "show_badge": true
   },
   "branding": {
-    "title": "ShipAny 建立在巨人的肩膀上",
+    "title": "AIPHOTOSHOP 技术支持",
     "items": [
       {
         "title": "Next.js",
@@ -82,87 +82,80 @@
         }
       },
       {
-        "title": "React",
+        "title": "OpenAI",
         "image": {
-          "src": "/imgs/logos/react.svg",
-          "alt": "React"
+          "src": "/imgs/logos/openai.svg",
+          "alt": "OpenAI"
         }
       },
       {
-        "title": "TailwindCSS",
+        "title": "Stable Diffusion",
         "image": {
-          "src": "/imgs/logos/tailwindcss.svg",
-          "alt": "TailwindCSS"
+          "src": "/imgs/logos/sd.svg",
+          "alt": "Stable Diffusion"
         }
       },
       {
-        "title": "Shadcn/UI",
+        "title": "Stripe",
         "image": {
-          "src": "/imgs/logos/shadcn.svg",
-          "alt": "Shadcn/UI"
-        }
-      },
-      {
-        "title": "Vercel",
-        "image": {
-          "src": "/imgs/logos/vercel.svg",
-          "alt": "Vercel"
+          "src": "/imgs/logos/stripe.svg",
+          "alt": "Stripe"
         }
       }
     ]
   },
   "introduce": {
     "name": "introduce",
-    "title": "什么是 ShipAny",
-    "label": "介绍",
-    "description": "ShipAny 是一个用于构建 AI SaaS 创业项目的 NextJS 模板，内置多种模板和组件。",
+    "title": "什么是 AIPHOTOSHOP？",
+    "label": "平台介绍",
+    "description": "AIPHOTOSHOP.uk 是一款基于AI的照片生成平台，用户只需输入描述，即可一键生成高质量AI照片。支持多种风格、尺寸和创意玩法，满足你的所有AI绘画需求。",
     "image": {
       "src": "/imgs/features/1.png"
     },
     "items": [
       {
-        "title": "即用型模板",
-        "description": "从数十个生产就绪的 AI SaaS 模板中选择，快速启动您的项目。",
-        "icon": "RiNextjsFill"
+        "title": "AI智能生成",
+        "description": "输入描述，AI自动生成高质量照片，简单高效。",
+        "icon": "RiRobot2Line"
       },
       {
-        "title": "基础设施配置",
-        "description": "立即获取内置最佳实践的可扩展基础设施。",
-        "icon": "RiDatabase2Line"
+        "title": "多风格支持",
+        "description": "支持艺术、写实、动漫等多种风格，满足不同创作需求。",
+        "icon": "RiPaletteFill"
       },
       {
-        "title": "快速部署",
-        "description": "在几小时内将您的 AI SaaS 应用部署到生产环境，而不是几天。",
-        "icon": "RiCloudyFill"
+        "title": "付费即用",
+        "description": "灵活套餐，付费后即可无限制使用AI绘画功能。",
+        "icon": "RiMoneyDollarCircleLine"
       }
     ]
   },
   "benefit": {
     "name": "benefit",
-    "title": "为什么选择 ShipAny",
-    "label": "优势",
-    "description": "获取启动 AI 创业所需的一切 - 从即用型模板到技术支持。",
+    "title": "为什么选择 AIPHOTOSHOP？",
+    "label": "平台优势",
+    "description": "AIPHOTOSHOP.uk 致力于为AI绘画用户提供极致体验和高性价比服务。",
     "items": [
       {
-        "title": "完整框架",
-        "description": "基于 Next.js 构建，集成身份验证、支付和 AI 功能 - 一切开箱即用。",
-        "icon": "RiNextjsFill",
+        "title": "高质量输出",
+        "description": "采用先进AI模型，生成高清、细腻的照片作品。",
+        "icon": "RiImage2Line",
         "image": {
           "src": "/imgs/features/2.png"
         }
       },
       {
-        "title": "丰富的模板库",
-        "description": "选择各种 AI SaaS 模板来启动您的项目 - 聊天机器人、图像生成等。",
-        "icon": "RiClapperboardAiLine",
+        "title": "极速生成",
+        "description": "秒级响应，创意无需等待。",
+        "icon": "RiFlashlightFill",
         "image": {
           "src": "/imgs/features/3.png"
         }
       },
       {
-        "title": "技术指导",
-        "description": "获得专门支持并加入我们的开发者社区，确保您成功启动。",
-        "icon": "RiCodeFill",
+        "title": "安全支付",
+        "description": "集成Stripe支付，安全便捷，支持多种支付方式。",
+        "icon": "RiSecurePaymentLine",
         "image": {
           "src": "/imgs/features/4.png"
         }
@@ -171,8 +164,8 @@
   },
   "usage": {
     "name": "usage",
-    "title": "如何使用 ShipAny 启动项目",
-    "description": "通过三个简单步骤启动您的 AI SaaS 创业项目：",
+    "title": "如何使用 AIPHOTOSHOP",
+    "description": "三步开启AI照片创作之旅：",
     "image": {
       "src": "/imgs/features/1.png"
     },
@@ -180,149 +173,113 @@
     "text_align": "center",
     "items": [
       {
-        "title": "获取 ShipAny",
-        "description": "一次性付款购买 ShipAny。查收邮件获取代码和文档。",
+        "title": "注册账号",
+        "description": "简单注册，立即体验AI照片生成。",
         "image": {
           "src": "/imgs/features/5.png"
         }
       },
       {
-        "title": "开始您的项目",
-        "description": "阅读文档并克隆 ShipAny 代码。开始构建您的 AI SaaS 创业项目。",
+        "title": "选择套餐",
+        "description": "灵活付费，满足不同创作需求。",
         "image": {
           "src": "/imgs/features/6.png"
         }
       },
       {
-        "title": "定制您的项目",
-        "description": "使用您的数据和内容修改模板。满足特定的 AI 功能需求。",
+        "title": "输入描述生成",
+        "description": "输入你的创意描述，AI一键生成照片。",
         "image": {
           "src": "/imgs/features/7.png"
-        }
-      },
-      {
-        "title": "部署到生产环境",
-        "description": "通过几个步骤将项目部署到生产环境，立即开始服务客户。",
-        "image": {
-          "src": "/imgs/features/8.png"
         }
       }
     ]
   },
   "feature": {
     "name": "feature",
-    "title": "ShipAny 核心功能",
-    "description": "快速高效启动 AI SaaS 创业所需的一切。",
+    "title": "核心功能",
+    "description": "AIPHOTOSHOP.uk 为AI绘画用户量身打造的功能体系。",
     "items": [
       {
-        "title": "Next.js 模板",
-        "description": "生产就绪的 Next.js 模板，支持 SEO 友好结构和国际化。",
-        "icon": "RiNextjsFill"
-      },
-      {
-        "title": "身份验证和支付",
-        "description": "集成 Google OAuth、一键登录和 Stripe 支付处理。",
-        "icon": "RiKey2Fill"
-      },
-      {
-        "title": "数据基础设施",
-        "description": "内置 Supabase 集成，提供可靠和可扩展的数据存储。",
-        "icon": "RiDatabase2Line"
-      },
-      {
-        "title": "一键部署",
-        "description": "无缝部署到 Vercel 或 Cloudflare，自动化设置。",
-        "icon": "RiCloudy2Fill"
-      },
-      {
-        "title": "业务分析",
-        "description": "集成 Google Analytics 和 Search Console 追踪增长。",
-        "icon": "RiBarChart2Line"
-      },
-      {
-        "title": "AI 就绪基础设施",
-        "description": "预配置 AI 集成，内置积分系统和 API 销售。",
+        "title": "AI照片生成",
+        "description": "输入描述，AI自动生成高质量照片。",
         "icon": "RiRobot2Line"
+      },
+      {
+        "title": "多风格选择",
+        "description": "支持多种艺术风格和尺寸。",
+        "icon": "RiPaletteFill"
+      },
+      {
+        "title": "会员付费",
+        "description": "灵活套餐，付费后无限制使用。",
+        "icon": "RiVipCrown2Line"
+      },
+      {
+        "title": "作品管理",
+        "description": "支持个人作品集管理与下载。",
+        "icon": "RiGalleryFill"
+      },
+      {
+        "title": "安全支付",
+        "description": "集成Stripe，支付安全有保障。",
+        "icon": "RiSecurePaymentLine"
       }
     ]
   },
   "stats": {
     "name": "stats",
-    "label": "统计",
-    "title": "用户喜爱 ShipAny",
-    "description": "因为它易于使用且快速发布。",
+    "label": "平台数据",
+    "title": "用户信赖 AIPHOTOSHOP",
+    "description": "数千AI绘画爱好者的共同选择。",
     "icon": "FaRegHeart",
     "items": [
       {
-        "title": "信任",
-        "label": "99+",
-        "description": "客户"
+        "title": "注册用户",
+        "label": "10,000+",
+        "description": "AI绘画爱好者"
       },
       {
-        "title": "内置",
-        "label": "20+",
-        "description": "组件"
+        "title": "生成作品",
+        "label": "100,000+",
+        "description": "AI照片"
       },
       {
-        "title": "快速发布",
-        "label": "5",
-        "description": "分钟"
+        "title": "满意度",
+        "label": "99%",
+        "description": "用户好评"
       }
     ]
   },
   "testimonial": {
     "name": "testimonial",
     "label": "用户评价",
-    "title": "用户如何评价 ShipAny",
-    "description": "听听使用 ShipAny 启动 AI 创业项目的开发者和创始人怎么说。",
+    "title": "真实用户反馈",
+    "description": "看看大家如何评价 AIPHOTOSHOP.uk",
     "icon": "GoThumbsup",
     "items": [
       {
-        "title": "陈大卫",
-        "label": "AIWallpaper.shop 创始人",
-        "description": "ShipAny 为我们节省了数月的开发时间。我们仅用 2 天就启动了 AI 壁纸业务，一周内就获得了第一个付费客户！",
+        "title": "李明",
+        "label": "插画师",
+        "description": "AIPHOTOSHOP 让我的创作效率提升了好几倍，AI生成的照片质量非常高！",
         "image": {
           "src": "/imgs/users/1.png"
         }
       },
       {
-        "title": "金瑞秋",
-        "label": "HeyBeauty.ai 技术总监",
-        "description": "预构建的 AI 基础设施是一个游戏规则改变者。我们无需担心架构 - 只需专注于 AI 美容技术并快速上线。",
+        "title": "王芳",
+        "label": "摄影爱好者",
+        "description": "付费套餐很灵活，AI生成的照片风格多样，非常满意。",
         "image": {
           "src": "/imgs/users/2.png"
         }
       },
       {
-        "title": "马库斯",
-        "label": "独立开发者",
-        "description": "作为独立开发者，ShipAny 给了我所需的一切 - 身份验证、支付、AI 集成和漂亮的 UI。一个周末就启动了我的 SaaS！",
+        "title": "张伟",
+        "label": "自媒体人",
+        "description": "AIPHOTOSHOP.uk 是我内容创作的好帮手，推荐给所有AI绘画爱好者！",
         "image": {
           "src": "/imgs/users/3.png"
-        }
-      },
-      {
-        "title": "索菲亚",
-        "label": "Melodisco CEO",
-        "description": "这些模板可直接用于生产且高度可定制。我们用几小时而不是几个月就建立了 AI 音乐平台。上市时间令人难以置信！",
-        "image": {
-          "src": "/imgs/users/4.png"
-        }
-      },
-      {
-        "title": "詹姆斯",
-        "label": "GPTs.works 技术主管",
-        "description": "ShipAny 的基础设施非常稳固。我们从 0 扩展到 1 万用户都没碰后端。这是我们 AI 创业最好的投资。",
-        "image": {
-          "src": "/imgs/users/5.png"
-        }
-      },
-      {
-        "title": "张安娜",
-        "label": "创业者",
-        "description": "从想法到上线只用了 3 天！ShipAny 的模板和部署工具让我们能够以令人难以置信的速度测试 AI 业务概念。",
-        "image": {
-          "src": "/imgs/users/6.png"
         }
       }
     ]
@@ -330,50 +287,46 @@
   "faq": {
     "name": "faq",
     "label": "常见问题",
-    "title": "关于 ShipAny 的常见问题",
-    "description": "还有其他问题？通过 Discord 或电子邮件联系我们。",
+    "title": "关于 AIPHOTOSHOP 的常见问题",
+    "description": "还有其他疑问？欢迎联系我们。",
     "items": [
       {
-        "title": "ShipAny 究竟是什么，它是如何工作的？",
-        "description": "ShipAny 是一个专门为构建 AI SaaS 创业项目设计的综合性 NextJS 模板。它提供即用型模板、基础设施设置和部署工具，帮助您在几小时内而不是几天内启动 AI 业务。"
+        "title": "AIPHOTOSHOP 是什么？",
+        "description": "AIPHOTOSHOP.uk 是一个AI照片生成平台，用户付费后可无限制使用AI生成高质量照片。"
       },
       {
-        "title": "使用 ShipAny 需要高级技术技能吗？",
-        "description": "虽然基本的编程知识会有帮助，但 ShipAny 设计得非常开发者友好。我们的模板和文档使您即使不是 AI 或云基础设施专家也能轻松入门。"
+        "title": "如何付费和使用？",
+        "description": "注册账号后选择套餐，支付成功即可无限制使用AI绘画功能。"
       },
       {
-        "title": "我可以用 ShipAny 构建什么类型的 AI SaaS？",
-        "description": "ShipAny 支持广泛的 AI 应用，从内容生成到数据分析工具。我们的模板涵盖流行用例，如 AI 聊天机器人、内容生成器、图像处理应用等。"
+        "title": "支持哪些风格？",
+        "description": "支持艺术、写实、动漫等多种风格，满足不同创作需求。"
       },
       {
-        "title": "使用 ShipAny 通常需要多长时间才能启动？",
-        "description": "使用 ShipAny，您可以在几小时内完成工作原型，并在几小时内完成生产就绪的应用。我们的一键部署和预配置基础设施显著缩短了传统的数月开发周期。"
+        "title": "生成的照片可以商用吗？",
+        "description": "付费用户生成的照片可用于个人及商业用途，具体请参考平台协议。"
       },
       {
-        "title": "ShipAny 的基础设施包括什么？",
-        "description": "ShipAny 提供完整的基础设施栈，包括身份验证、数据库设置、API 集成、支付处理和可扩展的云部署。一切都按照行业最佳实践预先配置。"
-      },
-      {
-        "title": "我可以自定义模板以匹配我的品牌吗？",
-        "description": "当然可以！所有 ShipAny 模板都完全可定制。您可以修改设计、功能和功能性以匹配您的品牌标识和特定业务需求，同时保持强大的底层基础设施。"
+        "title": "支付是否安全？",
+        "description": "平台集成Stripe支付，支持多种支付方式，安全可靠。"
       }
     ]
   },
   "cta": {
     "name": "cta",
-    "title": "启动您的第一个 AI SaaS 创业项目",
-    "description": "从这里开始，使用 ShipAny 启动。",
+    "title": "开启AI照片创作之旅",
+    "description": "立即注册，体验AI绘画的无限可能！",
     "buttons": [
       {
-        "title": "获取 ShipAny",
-        "url": "https://shipany.ai",
-        "target": "_blank",
+        "title": "立即体验",
+        "url": "/#pricing",
+        "target": "_self",
         "icon": "GoArrowUpRight"
       },
       {
-        "title": "阅读文档",
-        "url": "https://docs.shipany.ai",
-        "target": "_blank",
+        "title": "查看作品",
+        "url": "/showcase",
+        "target": "_self",
         "variant": "outline"
       }
     ]
@@ -381,27 +334,27 @@
   "footer": {
     "name": "footer",
     "brand": {
-      "title": "ShipAny",
-      "description": "ShipAny 是一个用于构建 AI SaaS 创业项目的 NextJS 模板。通过丰富的模板和组件快速启动。",
+      "title": "AIPHOTOSHOP",
+      "description": "AIPHOTOSHOP.uk，AI照片生成平台，付费后无限制使用AI绘画，释放你的创意。",
       "logo": {
         "src": "/logo.png",
-        "alt": "ShipAny"
+        "alt": "AIPHOTOSHOP"
       },
       "url": "/"
     },
-    "copyright": "© 2025 • ShipAny 保留所有权利。",
+    "copyright": "© 2024 • AIPHOTOSHOP.uk 保留所有权利。",
     "nav": {
       "items": [
         {
           "title": "关于",
           "children": [
             {
-              "title": "功能特点",
+              "title": "AI绘画",
               "url": "/#feature",
               "target": "_self"
             },
             {
-              "title": "案例展示",
+              "title": "作品展示",
               "url": "/#showcase",
               "target": "_self"
             },
@@ -416,39 +369,14 @@
           "title": "资源",
           "children": [
             {
-              "title": "文档",
-              "url": "https://docs.shipany.ai",
-              "target": "_blank"
+              "title": "帮助中心",
+              "url": "/help",
+              "target": "_self"
             },
             {
-              "title": "组件",
-              "url": "https://shipany.ai/components",
-              "target": "_blank"
-            },
-            {
-              "title": "模板",
-              "url": "https://shipany.ai/templates",
-              "target": "_blank"
-            }
-          ]
-        },
-        {
-          "title": "友情链接",
-          "children": [
-            {
-              "title": "ThinkAny",
-              "url": "https://thinkany.ai",
-              "target": "_blank"
-            },
-            {
-              "title": "HeyBeauty",
-              "url": "https://heybeauty.ai",
-              "target": "_blank"
-            },
-            {
-              "title": "Pagen",
-              "url": "https://pagen.so",
-              "target": "_blank"
+              "title": "API文档",
+              "url": "/api-docs",
+              "target": "_self"
             }
           ]
         }
@@ -459,25 +387,19 @@
         {
           "title": "X",
           "icon": "RiTwitterXFill",
-          "url": "https://x.com/shipanyai",
+          "url": "https://x.com/aiphotoshop",
           "target": "_blank"
         },
         {
           "title": "Github",
           "icon": "RiGithubFill",
-          "url": "https://github.com/shipanyai",
-          "target": "_blank"
-        },
-        {
-          "title": "Discord",
-          "icon": "RiDiscordFill",
-          "url": "https://discord.gg/HQNnrzjZQS",
+          "url": "https://github.com/aiphotoshop",
           "target": "_blank"
         },
         {
           "title": "邮箱",
           "icon": "RiMailLine",
-          "url": "mailto:support@shipany.ai",
+          "url": "mailto:support@aiphotoshop.uk",
           "target": "_self"
         }
       ]
