--- a/i18n/pages/pricing/en.json
+++ b/i18n/pages/pricing/en.json
@@ -3,106 +3,95 @@
     "name": "pricing",
     "label": "Pricing",
     "title": "Pricing",
-    "description": "Get all features of ShipAny, Ship your AI SaaS startups fast.",
+    "description": "Get all features of aiphotoshop, experience smart AI photo editing.",
     "groups": [],
     "items": [
       {
         "title": "Starter",
-        "description": "Get started with your first SaaS startup.",
+        "description": "For users new to AI photo editing.",
         "features_title": "Includes",
         "features": [
-          "100 credits, valid for 1 month",
-          "NextJS boilerplate",
-          "SEO-friendly structure",
-          "Payment with Stripe",
-          "Data storage with Supabase",
-          "Google Oauth & One-Tap Login",
-          "i18n support"
+          "50 credits, valid for 1 month",
+          "AI-powered photo editing",
+          "Batch processing",
+          "High-res download",
+          "Privacy protection"
+        ],
+        "interval": "one-time",
+        "amount": 990,
+        "cn_amount": 6990,
+        "currency": "USD",
+        "price": "$9.9",
+        "original_price": "$19.9",
+        "unit": "USD",
+        "is_featured": false,
+        "tip": "Pay once, enjoy editing!",
+        "button": {
+          "title": "Get aiphotoshop",
+          "url": "/#pricing",
+          "icon": "RiFlashlightFill"
+        },
+        "product_id": "starter",
+        "product_name": "aiphotoshop Starter",
+        "credits": 50,
+        "valid_months": 1
+      },
+      {
+        "title": "Standard",
+        "description": "For users who need more editing times.",
+        "features_title": "Everything in Starter, plus",
+        "features": [
+          "300 credits, valid for 3 months",
+          "Priority processing queue",
+          "Dedicated customer support"
+        ],
+        "interval": "one-time",
+        "amount": 4900,
+        "cn_amount": 34900,
+        "currency": "USD",
+        "price": "$49",
+        "original_price": "$69",
+        "unit": "USD",
+        "is_featured": true,
+        "tip": "Pay once, enjoy editing!",
+        "button": {
+          "title": "Get aiphotoshop",
+          "url": "/#pricing",
+          "icon": "RiFlashlightFill"
+        },
+        "product_id": "standard",
+        "product_name": "aiphotoshop Standard",
+        "credits": 300,
+        "valid_months": 3
+      },
+      {
+        "title": "Premium",
+        "description": "For professionals and enterprise clients.",
+        "features_title": "Everything in Standard, plus",
+        "features": [
+          "1000 credits, valid for 6 months",
+          "API access",
+          "Team collaboration",
+          "Custom services"
         ],
         "interval": "one-time",
         "amount": 9900,
         "cn_amount": 69900,
         "currency": "USD",
         "price": "$99",
-        "original_price": "$199",
+        "original_price": "$129",
         "unit": "USD",
         "is_featured": false,
-        "tip": "Pay once. Build unlimited projects!",
+        "tip": "Pay once, enjoy editing!",
         "button": {
-          "title": "Get ShipAny",
-          "url": "/#pricing",
-          "icon": "RiFlashlightFill"
-        },
-        "product_id": "starter",
-        "product_name": "ShipAny Boilerplate Starter",
-        "credits": 100,
-        "valid_months": 1
-      },
-      {
-        "title": "Standard",
-        "description": "Ship Fast with your SaaS Startups.",
-        "label": "Popular",
-        "features_title": "Everything in Starter, plus",
-        "features": [
-          "200 credits, valid for 3 month",
-          "Deploy with Vercel or Cloudflare",
-          "Generation of Privacy & Terms",
-          "Google Analytics Integration",
-          "Google Search Console Integration",
-          "Discord community",
-          "Technical support for your first ship",
-          "Lifetime updates"
-        ],
-        "interval": "one-time",
-        "amount": 19900,
-        "cn_amount": 139900,
-        "currency": "USD",
-        "price": "$199",
-        "original_price": "$299",
-        "unit": "USD",
-        "is_featured": true,
-        "tip": "Pay once. Build unlimited projects!",
-        "button": {
-          "title": "Get ShipAny",
-          "url": "/#pricing",
-          "icon": "RiFlashlightFill"
-        },
-        "product_id": "standard",
-        "product_name": "ShipAny Boilerplate Standard",
-        "credits": 200,
-        "valid_months": 3
-      },
-      {
-        "title": "Premium",
-        "description": "Ship Any AI SaaS Startups.",
-        "features_title": "Everything in Standard, plus",
-        "features": [
-          "300 credits, valid for 1 year",
-          "Business Functions with AI",
-          "User Center",
-          "Credits System",
-          "API Sales for your SaaS",
-          "Admin System",
-          "Priority Technical Support"
-        ],
-        "interval": "one-time",
-        "amount": 29900,
-        "cn_amount": 199900,
-        "currency": "USD",
-        "price": "$299",
-        "original_price": "$399",
-        "unit": "USD",
-        "is_featured": false,
-        "tip": "Pay once. Build unlimited projects!",
-        "button": {
-          "title": "Get ShipAny",
+          "title": "Get aiphotoshop",
           "url": "/#pricing",
           "icon": "RiFlashlightFill"
         },
         "product_id": "premium",
-        "product_name": "ShipAny Boilerplate Premium",
-        "credits": 300,
-        "valid_months": 12
+        "product_name": "aiphotoshop Premium",
+        "credits": 1000,
+        "valid_months": 6
       }
     ]
   }
