优化首页SEO、隐藏图片分辨率、缩小Hero与输入区间距

--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -1,8 +1,8 @@
 {
   "metadata": {
-    "title": "gramhir.pro ai photo generator shop | AI Photo Editor",
-    "description": "gramhir.pro is a AI photo editor, you can edit your photos with AI.",
-    "keywords": "gramhir.pro, AI Photo Editor, AI Photo Editor"
+    "title": "AI Photo Generator | AI Photo Shop | Gramhir AI Photo",
+    "description": "Gramhir AI Photo Generator - Create stunning AI photos with our advanced AI photo generation platform. Professional AI photo editing and generation services.",
+    "keywords": "AI Photo Generator, AI Photo Shop, Gramhir AI Photo, AI Photo Editing, AI Photo Generation, AI Photo Creator"
   },
   "user": {
     "sign_in": "Sign In",
