--- a/i18n/messages/zh.json
+++ b/i18n/messages/zh.json
@@ -1,8 +1,8 @@
 {
   "metadata": {
-    "title": "gramhir.pro ai photo generator shop | AI Photo Editor",
-    "description": "gramhir.pro is a AI photo editor, you can edit your photos with AI.",
-    "keywords": "gramhir.pro, AI Photo Editor, AI Photo Editor"
+    "title": "AI照片生成器 | AI照片商店 | Gramhir AI照片",
+    "description": "Gramhir AI照片生成器 - 使用我们先进的AI照片生成平台创建令人惊叹的AI照片。专业的AI照片编辑和生成服务。",
+    "keywords": "AI照片生成器, AI照片商店, Gramhir AI照片, AI照片编辑, AI照片生成, AI照片创作"
   },
   "user": {
     "sign_in": "登录",
