--- a/i18n/pages/landing/en.json
+++ b/i18n/pages/landing/en.json
@@ -35,10 +35,9 @@
     "show_locale": true
   },
   "hero": {
-    "title": "AI Photo Generation, Unleash Your Creativity",
+    "title": "AI Photo Generation & Editing Platform",
     "highlight_text": "AI Photo Generation",
-    "description": "AIPHOTOSHOP.uk is an AI photo generation platform designed for AI art lovers.<br/>After payment, you can use AI to generate high-quality photos without limits and unleash your imagination.",
-    
+    "description": "Gramhir AI Photo Generator - Your professional AI photo generation and editing platform. Create stunning AI photos with our advanced AI technology. Perfect for AI photo creation and editing needs.",
     "buttons": [],
     "show_happy_users": false,
     "show_badge": true
