--- a/i18n/pages/landing/zh.json
+++ b/i18n/pages/landing/zh.json
@@ -35,10 +35,9 @@
     "show_locale": true
   },
   "hero": {
-    "title": "AI照片生成，开启创意新纪元",
+    "title": "AI照片生成与编辑平台",
     "highlight_text": "AI照片生成",
-    "description": "AIPHOTOSHOP.uk，专为AI绘画爱好者打造的AI照片生成平台。<br/>付费后即可无限制使用AI生成高质量照片，释放你的想象力。",
-    
+    "description": "Gramhir AI照片生成器 - 您的专业AI照片生成和编辑平台。使用我们先进的AI技术创建令人惊叹的AI照片。完美满足AI照片创作和编辑需求。",
     "buttons": [],
     "show_happy_users": false,
     "show_badge": true
